# Alconna

./: .gitignore  CHANGELOG.md  MANIFEST.in  README-EN.md  README.md  README.rst  alconna_dispatcher.py  benchmark.py  changelog.md  devtool.py  entry_test.py  exam1.py  exam3.py  exam7.py  exam8.py  pyproject.toml  requirements.txt  requirements_test.txt  requirements_text.txt  setup.cfg  setup.py  test_alconna_commander.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: auto-merge.yml  release.yml  test.yml
alconna/: component.py  exceptions.py
alconna/commander/: letoderea.py
arclet/alconna/: __init__.py  __main__.py  action.py  actions.py  analyser.py  arpamar.py  base.py  commandline.py  component.py  decorate.py  default.lang  exceptions.py  help.py  helptext.py  lang_config.py  main.py  manager.py  parser.py  proxy.py  types.py  util.py  visitor.py
arclet/alconna/analysis/: __init__.py  analyser.py  arg_handlers.py  parts.py
arclet/alconna/arpamar/: __init__.py  behavior.py  duplication.py  stub.py
arclet/alconna/builtin/: actions.py  analyser.py  commandline.py  construct.py  formatter.py
arclet/alconna/commander/: broadcast.py
arclet/alconna/graia/: __init__.py  analyser.py  dispatcher.py  proxy.py
commander/: __init__.py  __main__.py  broadcast.py  commander.py  letoderea.py  test_commander_bcc.py  test_commander_leto.py
dev_tools/: alconna_performance.py  benchmark.py  test_alconna.py  test_alconna_1.py  test_alconna_2.py  test_alconna_3.py  test_alconna_4.py  test_alconna_decorate.py  test_alconna_fire.py  test_alconna_pure.py  test_args.py  test_behavior.py  test_commander_bcc.py  test_commander_leto.py  test_dispatcher.py  test_duplication.py  test_formatter.py  test_help_formatter.py  test_manager.py  test_pattern.py  test_proxy.py
example/: calculate.py  endpoint.py  exec_code.py  exec_sql.py  img_search.py  pip.py
graia/: requirements.txt  setup.py
graia/arclet/alconna/graia/: __init__.py  analyser.py  dispatcher.py  proxy.py
src/arclet/alconna/: __init__.py  __main__.py  _dcls.py  action.py  analyser.py  analysis.py  args.py  argv.py  arpamar.py  arparma.py  base.py  builtin.py  completion.py  config.py  constraint.py  container.py  core.py  default.lang  duplication.py  exceptions.py  executor.py  formatter.py  handlers.py  header.py  lang.py  lru.py  lru.pyi  main.py  manager.py  model.py  model.pyi  output.py  parts.py  shortcut.py  special.py  stub.py  types.py  typing.py  util.py  visitor.py
src/arclet/alconna/_internal/: _analyser.py  _argv.py  _handlers.py  _header.py  _shortcut.py  _util.py
src/arclet/alconna/_stargazing/: compiler.py  flywheel.py
src/arclet/alconna/analysis/: __init__.py  analyser.py  arg_handlers.py  base.py  container.py  parts.py  special.py
src/arclet/alconna/arpamar/: __init__.py  stub.py
src/arclet/alconna/builtin/: actions.py  analyser.py  checker.py  commandline.py  construct.py  formatter.py  pattern.py
src/arclet/alconna/components/: action.py  behavior.py  duplication.py  executor.py  output.py  stub.py  visitor.py
src/arclet/alconna/guneth/: _analyser.py
src/arclet/alconna/i18n/: .config.json  .lang.schema.json  .template.json  __init__.py  en-US.json  zh-CN.json
src/arclet/alconna/ingedia/: _analyser.py  _argv.py  _handlers.py  _shortcut.py  _util.py
src/arclet/alconna/sistana/: __init__.py  analyzer.py  buffer.py  err.py  fragment.py  some.py
src/arclet/alconna/sistana/model/: __init__.py  capture.py  fragment.py  mix.py  pattern.py  pointer.py  receiver.py  router.py  snapshot.py  track.py
src/arclet/alconna/sistana/utils/: misc.py
src/arclet/alconna/v1/: __init__.py  args.py  builtin.py  compat.py  duplication.py  stub.py  typing.py
test_alconna/: analyser_test.py  args_test.py  base_test.py  components_test.py  config_test.py  construct_test.py  core_test.py  entry_test.py  type_test.py  util_test.py
tests/: analyser_test.py  args_test.py  base_test.py  components_test.py  config_test.py  core_test.py  devtool.py  util_test.py
tests/sistana/: asserts.py  test_analyze.py  test_capture.py  test_fragment.py  test_mix.py  test_pattern.py  test_receiver.py
