[metadata]
name = arclet-alconna
version = 1.2.0.6
keywords =
    command,
    argparse,
    fast,
    alconna,
    cli,
    command-line,
    parsing,
    optparse,
    parser
author = RF-Tar-Railt
author_email = rf_tar_railt@qq.com
description = A High-performance, Generality, Humane Command Line Arguments Parser Library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ArcletProject/Alconna
project_urls =
    Documentation = https://arcletproject.github.io/docs/alconna/tutorial
    Bug Reports = https://github.com/ArcletProject/Alconna/issues
    Source = https://github.com/ArcletProject/Alconna
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
include_package_data = True
python_requires = >=3.8
